objects/Transcodifica_OLO_Remedy__c.object
<CustomObject>
    <fields>
        <fullName>Codice_Cliente_SAP__c</fullName>
        <label>Codice Cliente SAP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Fiscale__c</fullName>
        <label>Codice Fiscale</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comune__c</fullName>
        <label>Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <label>CustomerId</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Remedy__c</fullName>
        <label>Nome Remedy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partita_IVA_CEE__c</fullName>
        <label>Partita IVA CEE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partita_IVA__c</fullName>
        <label>Partita IVA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ragione_Sociale__c</fullName>
        <label>Ragione Sociale</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Transcodifica_OLO_Remedy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transcodifica_OLO_Remedy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>